--- a/mainpage.html
+++ b/mainpage.html
@@ -15,6 +15,13 @@
                 color: #f5efef;
             }
             
+            h2 {
+                background-color: black;
+                border: 3px solid #000;
+                border-radius: 50%;
+                padding: 10px;
+            }
+
             button {
                 background-color: transparent;
                 border: none;
