Change HHG reference

--- a/mainpage.html
+++ b/mainpage.html
@@ -14,13 +14,6 @@
                 font-size: 25px;
                 color: #f5efef;
             }
-            
-            h2 {
-                background-color: black;
-                border: 3px solid #000;
-                border-radius: 50%;
-                padding: 10px;
-            }
 
             button {
                 background-color: transparent;
@@ -48,6 +41,7 @@
 
             #result {
                 margin-top: 25px;
+                margin-bottom: 25px;
                 font-size: 24px;
                 color: #f5efef;
                 display: block;
