--- a/mainpage.html
+++ b/mainpage.html
@@ -50,31 +50,10 @@
             }
         }
 
-        .Spoofing {
-            color: #ff8400;
-        }
-
-        .Back-Door {
-            color: #00a2ff;
-        }
-
-        .Malware {
-            color: #995fd0;
-        }
-
-        .Phishing {
-            color: #c34545;
-        }
-
-        .DDoS {
-            color: #5eb552;
-        }
-
         #result {
             margin-top: 25px;
             margin-bottom: 25px;
             font-size: 24px;
-            color: #f5efef;
             font-weight: bold;
             text-shadow:
                 -1px -1px 0 black,
@@ -90,16 +69,17 @@
     <h1><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/header.png"
             alt="HHG Handy Hacking Guide"></h1>
     <p>Choose your move:</p>
-    <button id="Spoofing" class="choice Spoofing"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/spoofing.png"
-            alt="Spoofing"></button>
-    <button id="Back Door" class="choice Back Door"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/backdoor.png"
+    <button id="Spoofing"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/spoofing.png"
+        alt="Spoofing"></button>
+    <button id="Back Door"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/backdoor.png"
             alt="Back Door"></button>
-    <button id="Malware" class="choice Malware"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/malware.png"
+    <button id="Malware"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/malware.png"
             alt="Malware"></button>
-    <button id="Phishing"class="choice Phishing"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/phishing.png"
+    <button id="Phishing"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/phishing.png"
             alt="Phishing"></button>
-    <button id="DDoS" class="choice DDoS"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/DDoS.png"
+    <button id="DDoS"><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/DDoS.png"
             alt="DDoS"></button>
+
     <p id="result"></p>
     <h2><img src="https://raw.githubusercontent.com/Pup-Noodlz/HHG/main/Images/HHGFinal.png" alt="HHG Possibilities">
     </h2>
