--- a/5ways.html
+++ b/5ways.html
@@ -3,7 +3,7 @@
 
 <head>
     <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
-    <title>Handy Hacking Guide</title>
+    <title>Handy Hacking Guide - 5ways</title>
     <style>
         body {
             background-color: #3d3d3d;
